--- a/index.html
+++ b/index.html
@@ -1,13 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300;1,400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="/styles/styles.css">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Testing ghub pages</h1>
+    <div class="header">
+        <div class="logo">
+            <h2>HEADER LOGO</h2>
+        </div>
+        <div class="menu">
+            <ul>
+                <li><a href="#">Header link one</a></li>
+                <li><a href="#">Header link two</a></li>
+                <li><a href="#">Header link three</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="hero">
+        <div class="text">
+            <h1>This website is awesome</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At hic culpa non iusto fugit laboriosam?</p>
+
+            <button>
+                <a href="#">Sign Up</a>
+            </button>
+
+        </div>
+        <img src="/assets/pexels-fauxels-3184454.jpg" alt="Work desktop">
+    </div>
+
+    <div class="content">
+        <h2>Some random information</h2>
+        <div class="info">
+            <div class="card">
+                <img src="/assets/pexels-philippe-donn-1114690.jpg" alt="Storm">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, iste!</p>
+            </div>
+            <div class="card">
+                <img src="/assets/pexels-philippe-donn-1114690.jpg" alt="Storm">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, iste!</p>
+            </div>
+            <div class="card">
+                <img src="/assets/pexels-philippe-donn-1114690.jpg" alt="Storm">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, iste!</p>
+            </div>
+            <div class="card">
+                <img src="/assets/pexels-philippe-donn-1114690.jpg" alt="Storm">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, iste!</p>
+            </div>
+        </div>
+
+        <div class="quote">
+            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio a saepe aliquid ipsum earum odio?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio a saepe aliquid ipsum earum odio?"
+
+            <br><b>Bob Marley</b>
+        </div>
+
+        <div class="action">
+            <div class="action-box">
+                <div class="action-text">
+                    <h4>Call to action! Es hora!</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, architecto.</p>
+                </div>
+                <button>
+                    <a href="index.html">Sign Up</a>
+                </button>
+            </div>
+        </div>
+
+        <div class="footer">
+            Copyright &reg; 2021 <a href="https://github.com/Dante3056/"> | Dante Sollini</a>
+        </div>
+    </div>
 </body>
+
 </html>
