final deployment with small changes

--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300;1,400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/foundations_landing_page/styles/styles.css">
+    <link rel="stylesheet" href="/foundations_landing_page/styles/styles.css"> <!--githubpages-->
+    <link rel="stylesheet" href="/styles/styles.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="header">
+    <div class="header" id="header">
         <div class="logo">
             <h2>HEADER LOGO</h2>
         </div>
         <div class="menu">
             <ul>
-                <li><a href="#">Header link one</a></li>
-                <li><a href="#">Header link two</a></li>
-                <li><a href="#">Header link three</a></li>
+                <li><a href="#info">Random info</a></li>
+                <li><a href="#quote">Quotes</a></li>
+                <li><a href="#">Action</a></li>
             </ul>
         </div>
     </div>
@@ -41,40 +42,40 @@
 
     <div class="content">
         <h2>Some random information</h2>
-        <div class="info">
+        <div class="info" id="info">
             <div class="card">
-                <img src="assets/pexels-philippe-donn-1114690.jpg" alt="Storm">
+                <img src="assets/pexels-craig-dennis-205421.jpg" alt="laptop">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, iste!</p>
             </div>
             <div class="card">
-                <img src="assets/pexels-philippe-donn-1114690.jpg" alt="Storm">
+                <img src="assets/pexels-craig-dennis-205421.jpg" alt="laptop">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, iste!</p>
             </div>
             <div class="card">
-                <img src="assets/pexels-philippe-donn-1114690.jpg" alt="Storm">
+                <img src="assets/pexels-craig-dennis-205421.jpg" alt="laptop">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, iste!</p>
             </div>
             <div class="card">
-                <img src="assets/pexels-philippe-donn-1114690.jpg" alt="Storm">
+                <img src="assets/pexels-craig-dennis-205421.jpg" alt="laptop">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, iste!</p>
             </div>
         </div>
 
-        <div class="quote">
+        <div class="quote" id="quote">
             "Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio a saepe aliquid ipsum earum odio?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio a saepe aliquid ipsum earum odio?"
 
             <br><b>Bob Marley</b>
         </div>
 
-        <div class="action">
+        <div class="action" id="action">
             <div class="action-box">
                 <div class="action-text">
                     <h4>Call to action! Es hora!</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, architecto.</p>
                 </div>
                 <button>
-                    <a href="index.html">Sign Up</a>
+                    <a href="#header">Sign Up</a>
                 </button>
             </div>
         </div>
