--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300;1,400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/foundations_landing_page/styles/styles.css"> <!--githubpages-->
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css"> <!--githubpages-->
+    <!-- <link rel="stylesheet" href="/styles/styles.css"> -->
     <title>Document</title>
 </head>
 
